Fix Preferred Date field display on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -10237,7 +10237,7 @@ form#webform-submission-contact-node-14-add-form #edit-vehicle-details .panel-bo
   margin: 0;
 }
 
-form#webform-submission-contact-node-14-add-form #edit-vehicle-details .panel-body #edit-preferred-date-and-time-date {
+form#webform-submission-contact-node-14-add-form #edit-preferred-date-and-time-date {
   display: inline-block;
   width: auto;
 }
